Squashed commit of the following:
commit f7427d8c7dae2bcf2a71e093fce9abf10fe28a2c
Author: Alessandro Venturini <ales.ventus21@gmail.com>
Date:   Fri Apr 5 22:36:15 2024 +0200

    restore java language version for project compile

commit e1fa0feafd1dbf3b58de47598eff799d217a3e8b
Author: Alessandro Venturini <ales.ventus21@gmail.com>
Date:   Fri Apr 5 22:35:56 2024 +0200

    final port to java8

commit 3302fcb9012cf0436e50d329f21e6356641ed4e8
Author: Alessandro Venturini <ales.ventus21@gmail.com>
Date:   Fri Apr 5 19:53:43 2024 +0200

    fixed java 8 errors

commit 527335283c2ca7126adbd516efa4af709b69e78c
Author: Alessandro Venturini <ales.ventus21@gmail.com>
Date:   Fri Apr 5 19:50:26 2024 +0200

    changed language version to java 8

commit ea3a842c266e8ac1d213f7e6a08baa27636423f6
Author: Alessandro Venturini <ales.ventus21@gmail.com>
Date:   Fri Apr 5 19:48:29 2024 +0200

    substitute Optional isEmpty with isPresent

commit be6ef34cdd6683d5caa52bb52d9b2ec7a3761f75
Author: Alessandro Venturini <ales.ventus21@gmail.com>
Date:   Fri Apr 5 19:45:16 2024 +0200

    changed records into classes

commit 4bf87d39f1fd06ab3e6827a51cecd4b1ce930adf
Author: Alessandro Venturini <ales.ventus21@gmail.com>
Date:   Fri Apr 5 19:29:03 2024 +0200

    Downgraded switch blocks

commit 1aa2e3969387522b88c22cfcae0230fe6847631a
Author: Alessandro Venturini <ales.ventus21@gmail.com>
Date:   Fri Apr 5 19:25:31 2024 +0200

    Removed usage of var

commit a0b66b8b368fa584a2aee2896098c7be734874f2
Author: Alessandro Venturini <ales.ventus21@gmail.com>
Date:   Thu Apr 4 16:11:44 2024 +0200

    Update RoadsEnv.java